--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,25 @@
+aiogram==2.7
+aiohttp==3.6.2
+appdirs==1.4.3
+async-timeout==3.0.1
+attrs==19.3.0
+Babel==2.8.0
 certifi==2020.4.5.1
 chardet==3.0.4
+distlib==0.3.0
+filelock==3.0.12
+geographiclib==1.50
+geopy==1.21.0
 idna==2.9
+ip2location==8.4.1
+multidict==4.7.5
+PySocks==1.7.1
 pyTelegramBotAPI==3.6.7
-requests==2.7.0
+pytz==2019.3
+requests==2.23.0
 six==1.14.0
+ujson==2.0.3
 urllib3==1.25.9
+virtualenv==20.0.18
+yarl==1.4.2
+
