--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ geopy==1.21.0
 idna==2.9
 ip2location==8.4.1
 multidict==4.7.5
+psycopg2==2.8.5
 PySocks==1.7.1
 pyTelegramBotAPI==3.6.7
 pytz==2019.3
@@ -22,4 +23,5 @@ ujson==2.0.3
 urllib3==1.25.9
 virtualenv==20.0.18
 yarl==1.4.2
+
 
